[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "1"

[workspace.dependencies]
hdi = "=0.5.0-dev.1"
hdk = "=0.4.0-dev.1"
serde = "1"

[workspace.dependencies.zipzap]
path = "dnas/zipzap/zomes/coordinator/zipzap"

[workspace.dependencies.zipzap_integrity]
path = "dnas/zipzap/zomes/integrity/zipzap"

[workspace.dependencies.profiles]
path = "dnas/zipzap/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/zipzap/zomes/integrity/profiles"
